--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "crons": [
     {
-      "path": "/api/email/automations/scheduler",
+      "path": "/api/smsglobal/flush-queue?limit=50&key=c1ae7bf64e1173572",
+      "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/email/autoresponders/process-queue?limit=50&key=PASTE_YOUR_AUTORESPONDER_KEY_HERE",
       "schedule": "* * * * *"
     }
   ]
