--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
     "drawflow": "^0.0.60",
+    "eslint-config-next": "^15.5.9",
     "formidable": "^3.5.4",
     "glob": "^11.0.3",
     "grapesjs": "^0.22.14",
@@ -41,7 +42,7 @@
     "lucide-react": "^0.545.0",
     "mhtml2html": "^3.0.0",
     "micro": "^10.0.1",
-    "next": "^15.0.4",
+    "next": "^15.5.9",
     "node-fetch": "^3.3.2",
     "node-red-node-email": "^5.0.0",
     "nodemailer": "^7.0.10",
