Rescue package versions and restore clean build state
* Bump Next.js to 15.5.9

* Remove legacy email editor and website builder to restore clean build

--- a/package.json
+++ b/package.json
@@ -34,20 +34,16 @@
     "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
     "drawflow": "^0.0.60",
+    "eslint-config-next": "^15.5.9",
     "formidable": "^3.5.4",
     "glob": "^11.0.3",
-    "grapesjs": "^0.22.14",
-    "grapesjs-blocks-basic": "^1.0.2",
-    "grapesjs-mjml": "^1.0.7",
-    "grapesjs-preset-newsletter": "^1.0.2",
-    "grapesjs-preset-webpage": "^1.0.3",
     "html2canvas": "^1.4.1",
     "isomorphic-dompurify": "^2.26.0",
     "jsdom": "^27.0.1",
     "lucide-react": "^0.545.0",
     "mhtml2html": "^3.0.0",
     "micro": "^10.0.1",
-    "next": "^15.0.4",
+    "next": "^15.5.9",
     "node-fetch": "^3.3.2",
     "node-red-node-email": "^5.0.0",
     "nodemailer": "^7.0.10",
