--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.9",
+    "@sendgrid/mail": "^8.1.6",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.77.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@twilio/voice-sdk": "^2.18.0",
+    "axios": "^1.13.4",
     "chalk": "^5.6.2",
     "chromium": "^3.0.3",
+    "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
     "drawflow": "^0.0.60",
+    "formidable": "^3.5.4",
     "glob": "^11.0.3",
     "grapesjs": "^0.22.13",
     "grapesjs-mjml": "^1.0.7",
@@ -27,9 +33,11 @@
     "isomorphic-dompurify": "^2.26.0",
     "jsdom": "^27.0.1",
     "lucide-react": "^0.545.0",
-    "next": "15.5.7",
+    "micro": "^10.0.1",
+    "next": "15.5.9",
     "node-fetch": "^3.3.2",
     "node-red-node-email": "^5.0.0",
+    "openai": "^6.17.0",
     "papaparse": "^5.5.3",
     "puppeteer": "^24.27.0",
     "puppeteer-core": "^24.27.0",
@@ -42,6 +50,7 @@
     "resend": "^6.1.2",
     "stripe": "^18.5.0",
     "tr46": "^4.1.1",
+    "twilio": "^5.12.0",
     "whatwg-url": "^15.1.0",
     "zustand": "^5.0.8"
   },
